Improved UI for locking/editing swatches

--- a/website/styles/modules/swatches.scss
+++ b/website/styles/modules/swatches.scss
@@ -6,7 +6,7 @@
     --tooltip-color: var(--grey-10);
     --tooltip-background: var(--grey-100);
     --tooltip-hover: var(--brand-60);
-    --tooltip-margin: -8px;
+    // --tooltip-margin: -8px;
     position: relative;
     font-size: $size-smaller;
     padding: 0.5em;
