--- a/website/styles/props/site.scss
+++ b/website/styles/props/site.scss
@@ -2,7 +2,7 @@
   --body-text:            var(--grey-20);
   --bold-text:            var(--grey-10);
   --head-text:            var(--grey-20);
-  --navbar-back:          var(--blue-100);
+  --navbar-back:          var(--grey40-95);
   // --navbar-back:          var(--grey-100);
   --navbar-text:          var(--grey-40);
   --navbar-link:          var(--grey-30);
@@ -52,7 +52,7 @@
   --body-text:          var(--grey-60);
   --bold-text:          var(--grey-70);
   --head-text:          var(--grey-80);
-  --navbar-back:        var(--grey-30);
+  --navbar-back:        var(--grey20-30);
   --navbar-text:        var(--grey-60);
   --navbar-link:        var(--grey-70);
   --navbar-hover:       var(--grey-90);
@@ -64,7 +64,7 @@
   --app-side-shadow:   rgba(0, 0, 0, 0.2);
   --app-top-shadow:    rgba(0, 0, 0, 0.15);
   --footer-text:        var(--grey-40);
-  --footer-back:        var(--grey-10);
+  --footer-back:        var(--grey20-10);
   // --footer-border:      var(--grey-0);
   --footer-border:      black;
   --menu-text:          var(--grey-60);
