--- a/website/styles/website.scss
+++ b/website/styles/website.scss
@@ -52,6 +52,16 @@ dialog article {
   }
 }
 
+.sr-only:not(:focus):not(:active), .invisible {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 #{$dark-theme} {
   dialog article {
     --shadow-color: rgba(0, 0, 0, 0.04);
