--- a/website/styles/modules/app.scss
+++ b/website/styles/modules/app.scss
@@ -71,8 +71,9 @@ $item-margin-left: 0.5rem;
       margin-bottom: 0rem;
       padding: 0.25rem 0.5rem;
       border-radius: 4px;
+      --background-color: transparent;
       // border-bottom: 1px solid var(--menu-border);
-      // background-color: var(--menu-back);
+      background-color: var(--background-color);
       cursor: pointer;
       // border-left: 5px solid var(--menu-border);
       // box-shadow: var(--shadow-1);
