--- a/website/styles/website.scss
+++ b/website/styles/website.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
-// @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
-$brand-color: 'violet';
+// $brand-color: 'violet';
+// $brand-hue: 259;
+// $grey-hue: $brand-hue;
 $dark-theme: '#site.dark';
 
 @import '@abw/badger-css/styles/badger.scss';
